test/visibility/rename/noOldNameAccess.good
noOldNameAccess.chpl:8: In function 'main':
noOldNameAccess.chpl:9: error: 'bar' undeclared (first use this function)
